fixed link to corridor

--- a/site/characterization/characterization/index.html
+++ b/site/characterization/characterization/index.html
@@ -164,12 +164,12 @@ Users should conduct their own characterization with the specific platform weigh
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/performance_resized.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/performance_resized.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Rotary stage performance</em></td>
+<td style="text-align: center;"><em>Figure 1. Rotary stage performance</em></td>
 </tr>
 </tbody>
 </table>
@@ -179,12 +179,12 @@ Users should conduct their own characterization with the specific platform weigh
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/mim_resized.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/mim_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Minimum incremental motion measurement</em></td>
+<td style="text-align: center;"><em>Figure 2. Minimum incremental motion measurement</em></td>
 </tr>
 </tbody>
 </table>
@@ -199,15 +199,15 @@ Users should conduct their own characterization with the specific platform weigh
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/accuracy_repeatability_resized.png" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/accuracy_repeatability_resized.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Accuracy and repeatability test sequence (a) and</em></td>
+<td style="text-align: center;"><em>Figure 3. Accuracy and repeatability test sequence (a) and</em></td>
 </tr>
 <tr>
-<td align="center"><em>average of absolute position deviation in every angular velocity and acceleration condition (b)</em></td>
+<td style="text-align: center;"><em>average of absolute position deviation in every angular velocity and acceleration condition (b)</em></td>
 </tr>
 </tbody>
 </table>
@@ -216,15 +216,15 @@ Users should conduct their own characterization with the specific platform weigh
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure4" src="../img/step_response.png" /></th>
+<th style="text-align: center;"><img alt="Figure4" src="../img/step_response.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 4. Example step functions (0-90°) at different velocity and acceleration values.</em></td>
+<td style="text-align: center;"><em>Figure 4. Example step functions (0-90°) at different velocity and acceleration values.</em></td>
 </tr>
 <tr>
-<td align="center"><em>(left) 20 °·s¯¹, 200 °·s¯². (right) 100 °·s¯¹, 1200 °·s¯².</em></td>
+<td style="text-align: center;"><em>(left) 20 °·s¯¹, 200 °·s¯². (right) 100 °·s¯¹, 1200 °·s¯².</em></td>
 </tr>
 </tbody>
 </table>
@@ -232,12 +232,12 @@ Users should conduct their own characterization with the specific platform weigh
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure5" src="../img/Average_and_SD_of_absolute_position_deviation.png" /></th>
+<th style="text-align: center;"><img alt="Figure5" src="../img/Average_and_SD_of_absolute_position_deviation.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 5. Average (left) and standard deviation (right) of the absolute position deviation.</em></td>
+<td style="text-align: center;"><em>Figure 5. Average (left) and standard deviation (right) of the absolute position deviation.</em></td>
 </tr>
 </tbody>
 </table>
