--- a/site/pupil/assembly/index.html
+++ b/site/pupil/assembly/index.html
@@ -168,12 +168,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig2-Camera-Mirror.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig2-Camera-Mirror.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Mirror holder assembly</em></td>
+<td style="text-align: center;"><em>Figure 1. Mirror holder assembly</em></td>
 </tr>
 </tbody>
 </table>
@@ -186,12 +186,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig3-Camera-Mirror.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig3-Camera-Mirror.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Camera and filter holder assembly</em></td>
+<td style="text-align: center;"><em>Figure 2. Camera and filter holder assembly</em></td>
 </tr>
 </tbody>
 </table>
@@ -201,12 +201,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig4-Camera-Mirror.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig4-Camera-Mirror.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Camera assembly to head-fixation system</em></td>
+<td style="text-align: center;"><em>Figure 3. Camera assembly to head-fixation system</em></td>
 </tr>
 </tbody>
 </table>
@@ -217,12 +217,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure4" src="../img/Fig5-Camera-Mirror.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure4" src="../img/Fig5-Camera-Mirror.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 4. Camera and mirror</em></td>
+<td style="text-align: center;"><em>Figure 4. Camera and mirror</em></td>
 </tr>
 </tbody>
 </table>
