--- a/site/screens/assembly/index.html
+++ b/site/screens/assembly/index.html
@@ -163,15 +163,15 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-Embedded-Screens.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-Embedded-Screens.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><img alt="Gif1" src="../gif/Screen-assembly.gif" /></td>
+<td style="text-align: center;"><img alt="Gif1" src="../gif/Screen-assembly.gif" /></td>
 </tr>
 <tr>
-<td align="center"><em>Figure 1. Screen assembly</em></td>
+<td style="text-align: center;"><em>Figure 1. Screen assembly</em></td>
 </tr>
 </tbody>
 </table>
@@ -179,12 +179,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig2-Embedded-Screens.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig2-Embedded-Screens.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Front holder assembly</em></td>
+<td style="text-align: center;"><em>Figure 2. Front holder assembly</em></td>
 </tr>
 </tbody>
 </table>
@@ -192,24 +192,24 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig3-Embedded-Screens.png" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig3-Embedded-Screens.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Back holder assembly</em></td>
+<td style="text-align: center;"><em>Figure 3. Back holder assembly</em></td>
 </tr>
 </tbody>
 </table>
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure4" src="../img/Fig4-Embedded-Screens.png" /></th>
+<th style="text-align: center;"><img alt="Figure4" src="../img/Fig4-Embedded-Screens.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 4. Location of the screens on the platform</em></td>
+<td style="text-align: center;"><em>Figure 4. Location of the screens on the platform</em></td>
 </tr>
 </tbody>
 </table>
