--- a/site/sensors/characterization/index.html
+++ b/site/sensors/characterization/index.html
@@ -169,12 +169,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig6-Optical-Motion_Sensors.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig6-Optical-Motion_Sensors.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Relationship between the measurement error and the SQUAL value</em></td>
+<td style="text-align: center;"><em>Figure 1. Relationship between the measurement error and the SQUAL value</em></td>
 </tr>
 </tbody>
 </table>
@@ -184,12 +184,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig7-Optical-Motion_Sensors.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig7-Optical-Motion_Sensors.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Distribution of the SQUAL values (left). Speed vs SQUAL value relationship (right)</em></td>
+<td style="text-align: center;"><em>Figure 2. Distribution of the SQUAL values (left). Speed vs SQUAL value relationship (right)</em></td>
 </tr>
 </tbody>
 </table>
