--- a/site/sensors_3050/assembly/index.html
+++ b/site/sensors_3050/assembly/index.html
@@ -163,12 +163,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig2-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig2-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Soldered pins on the ADNS-3050</em></td>
+<td style="text-align: center;"><em>Figure 1. Soldered pins on the ADNS-3050</em></td>
 </tr>
 </tbody>
 </table>
@@ -176,12 +176,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig3-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig3-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. ADNS-3050 and lens assembled with the PCB holder.</em></td>
+<td style="text-align: center;"><em>Figure 2. ADNS-3050 and lens assembled with the PCB holder.</em></td>
 </tr>
 </tbody>
 </table>
