--- a/site/sensors_3050/characterization/index.html
+++ b/site/sensors_3050/characterization/index.html
@@ -164,24 +164,24 @@ Several recordings of 5 seconds at 1000 Hz were performed to characterize the pe
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig4-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig4-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. SQUAL value recordings for both axes</em></td>
+<td style="text-align: center;"><em>Figure 1. SQUAL value recordings for both axes</em></td>
 </tr>
 </tbody>
 </table>
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig5-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig5-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Distribution of the SQUAL values on each axis</em></td>
+<td style="text-align: center;"><em>Figure 2. Distribution of the SQUAL values on each axis</em></td>
 </tr>
 </tbody>
 </table>
@@ -189,12 +189,12 @@ Several recordings of 5 seconds at 1000 Hz were performed to characterize the pe
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig6-ADNS3050%20.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig6-ADNS3050%20.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Relationship between relative displacements and the SQUAL value</em></td>
+<td style="text-align: center;"><em>Figure 3. Relationship between relative displacements and the SQUAL value</em></td>
 </tr>
 </tbody>
 </table>
@@ -202,12 +202,12 @@ Several recordings of 5 seconds at 1000 Hz were performed to characterize the pe
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure4" src="../img/Fig7-ADNS3050.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure4" src="../img/Fig7-ADNS3050.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 4. Recordings of absolute displacements in roll and yaw axes of one revolution</em></td>
+<td style="text-align: center;"><em>Figure 4. Recordings of absolute displacements in roll and yaw axes of one revolution</em></td>
 </tr>
 </tbody>
 </table>
