--- a/site/wiring/wiring/index.html
+++ b/site/wiring/wiring/index.html
@@ -165,24 +165,24 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-Electrical-Connections.png" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-Electrical-Connections.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. PCB description</em></td>
+<td style="text-align: center;"><em>Figure 1. PCB description</em></td>
 </tr>
 </tbody>
 </table>
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig2-Electrical-Connections.png" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig2-Electrical-Connections.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. PCB with components soldered</em></td>
+<td style="text-align: center;"><em>Figure 2. PCB with components soldered</em></td>
 </tr>
 </tbody>
 </table>
@@ -190,12 +190,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure3" src="../img/Fig3-Electrical-Connections.png" /></th>
+<th style="text-align: center;"><img alt="Figure3" src="../img/Fig3-Electrical-Connections.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 3. Setup connections</em></td>
+<td style="text-align: center;"><em>Figure 3. Setup connections</em></td>
 </tr>
 </tbody>
 </table>
@@ -207,12 +207,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure4" src="../img/Fig4-Electrical-Connections.png" /></th>
+<th style="text-align: center;"><img alt="Figure4" src="../img/Fig4-Electrical-Connections.png" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 4. Emergency stop connections</em></td>
+<td style="text-align: center;"><em>Figure 4. Emergency stop connections</em></td>
 </tr>
 </tbody>
 </table>
