--- a/site/holders/headclamp/index.html
+++ b/site/holders/headclamp/index.html
@@ -163,12 +163,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure1" src="../img/Fig1-Head-Clamp.PNG" /></th>
+<th style="text-align: center;"><img alt="Figure1" src="../img/Fig1-Head-Clamp.PNG" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 1. Head clamp drawings</em></td>
+<td style="text-align: center;"><em>Figure 1. Head clamp drawings</em></td>
 </tr>
 </tbody>
 </table>
@@ -187,12 +187,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="Figure2" src="../img/Fig2-Head-Clamp.jpg" /></th>
+<th style="text-align: center;"><img alt="Figure2" src="../img/Fig2-Head-Clamp.jpg" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><em>Figure 2. Head clamp simulations</em></td>
+<td style="text-align: center;"><em>Figure 2. Head clamp simulations</em></td>
 </tr>
 </tbody>
 </table>
