fixed link to corridor

--- a/screens/VR/index.html
+++ b/screens/VR/index.html
@@ -187,7 +187,7 @@ sudo cp bin/godot.x11.opt.tools.32.llvm /usr/bin/godo
 <p>The 3D environment is created in Godot. The camera position is updated using a script written in GDScript, relative to the movements of the emulated mouse carrying the optical sensor input.
 The game is run via a bash script that ensures the game is running in full screen mode across the two monitors.
 The (x,y) coordinates of the player within the environment are automatically saved in a csv file. </p>
-<p>The virtual corridor is available at <a href="https://github.com/atranvan/corridor">https://github.com/atranvan/corridor</a></p>
+<p>The virtual corridor is available <a href="../files/corridor-master.zip">to download here.</a></p>
               
             </div>
           </div>
