--- a/site/screens/VR/index.html
+++ b/site/screens/VR/index.html
@@ -185,22 +185,10 @@ sudo cp bin/godot.x11.opt.tools.32.llvm /usr/bin/godo
 </code></pre>
 <h2 id="environment">Environment</h2>
 <p>The 3D environment is created in Godot. The camera position is updated using a script written in GDScript, relative to the movements of the emulated mouse carrying the optical sensor input.
-The game is run via a bash script that ensures the game is running in full screen mode across the two monitors.
+The game is run via a bash script that ensures the game is running in full-screen mode across the two monitors.
 The (x,y) coordinates of the player within the environment are automatically saved in a csv file. </p>
 <p>The virtual corridor is available <a href="../files/corridor-master.zip">to download here</a></p>
-<table>
-<thead>
-<tr>
-<th style="text-align: center;"><img alt="Video" src="../img/video_2021-02-06_12-03-12.avi" /></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align: center;"><em>Video of the setup in action</em></td>
-</tr>
-</tbody>
-</table>
-<p>The video below shows an a proof-of-principle experiment, where an untrained mouse in navigating on the setup. At the top, a camera behind (and right) to the mouse show the snout and whiskers and the screens. At the bottom, a camera above the setup shows mouse, the styrofoam ball and the top edge of the screens (helpful to see the physical rotation). The red line in the bottom right shows the trajectori of the animal in VR space.</p>
+<p><a href="https://vimeo.com/829853010">The video linked here</a> shows a proof-of-principle experiment, where an untrained mouse in navigating on the setup. At the top, a camera behind (and to the right of) the mouse shows the snout, whiskers and the screens. At the bottom, a camera above the setup shows the mouse, the styrofoam ball and the top edge of the screens (helpful to see the physical rotation). The red line in the bottom right shows the trajectory of the animal in VR space.</p>
               
             </div>
           </div>
